--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 *{
-  margin: 0;
+  margin: 0px;
   padding: 0;
   box-sizing: border-box;
 }
